--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "🔎 Minimal SEO plugin for Kirby CMS – for PHP lovers.",
     "version": "0.1.0",
     "license": "MIT",
+    "type": "kirby-plugin",
     "authors": [
         {
             "name": "Benjamin Haeberli",
@@ -15,11 +16,6 @@
         "seo",
         "kirby-plugin"
     ],
-    "autoload": {
-        "psr-4": {
-            "KirbySeo\\": "src/"
-        }
-    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
@@ -28,7 +24,22 @@
             "funkjedi/composer-include-files": true,
             "pestphp/pest-plugin": true
         },
+        "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "KirbySeo\\": "src/"
+        }
+    },
+    "require": {
+        "php": "^8.1",
+        "getkirby/composer-installer": "^1.2"
+    },
+    "require-dev": {
+        "laravel/pint": "^1.10",
+        "pestphp/pest": "^2.6",
+        "rector/rector": "^0.16.0"
     }
 }
