--- a/composer.json
+++ b/composer.json
@@ -1,46 +1,87 @@
 {
-    "name": "benjaminhaeberli/kirby-seo",
-    "description": "🔎 Minimal SEO plugin for Kirby CMS – for PHP lovers.",
-    "version": "0.1.0",
-    "license": "MIT",
-    "type": "kirby-plugin",
-    "authors": [
-        {
-            "name": "Benjamin Haeberli",
-            "email": "hello@benjaminhaeberli.ch",
-            "homepage": "https://benjaminhaeberli.ch/"
-        }
-    ],
-    "keywords": [
-        "kirby",
-        "seo",
-        "kirby-plugin",
-        "php"
-    ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "config": {
-        "allow-plugins": {
-            "getkirby/composer-installer": true,
-            "funkjedi/composer-include-files": true,
-            "pestphp/pest-plugin": true
-        },
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "KirbySeo\\": "src/"
-        }
-    },
-    "require": {
-        "php": "^8.1",
-        "getkirby/composer-installer": "^1.2"
-    },
-    "require-dev": {
-        "laravel/pint": "^1.10",
-        "pestphp/pest": "^2.6",
-        "rector/rector": "^0.16.0"
+  "name": "benjaminhaeberli/kirby-seo",
+  "description": "🔎 Minimal SEO plugin for Kirby CMS – for PHP lovers.",
+  "license": "MIT",
+  "type": "kirby-plugin",
+  "authors": [
+    {
+      "name": "Benjamin Haeberli",
+      "email": "hello@benjaminhaeberli.ch",
+      "homepage": "https://benjaminhaeberli.ch/"
     }
+  ],
+  "keywords": [
+    "kirby",
+    "seo",
+    "kirby-plugin",
+    "php"
+  ],
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "allow-plugins": {
+      "getkirby/composer-installer": true,
+      "funkjedi/composer-include-files": true,
+      "pestphp/pest-plugin": true
+    },
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
+  },
+  "autoload": {
+    "psr-4": {
+      "BenjaminHaeberli\\KirbySeo\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "serve": [
+      "Composer\\Config::disableProcessTimeout",
+      "@php -S localhost:8000 ./kirby/router.php --ansi"
+    ],
+    "refacto": "./vendor/bin/rector --ansi",
+    "lint": "./vendor/bin/pint --ansi",
+    "coverage": "./vendor/bin/pest --colors=always --coverage",
+    "fake:refacto": "./vendor/bin/rector --dry-run --ansi",
+    "fake:lint": "./vendor/bin/pint --test --ansi",
+    "test:types": "./vendor/bin/phpstan analyze --ansi",
+    "test:unit": "./vendor/bin/pest --colors=always",
+    "test": [
+      "@fake:refacto",
+      "@fake:lint",
+      "@test:types",
+      "@test:unit"
+    ],
+    "upgrade:composer": "composer update --prefer-stable --no-interaction --prefer-dist --ansi && composer validate --strict --ansi",
+    "fix:composer": [
+      "@upgrade:composer",
+      "composer clear-cache --ansi",
+      "composer dump-autoload --ansi",
+      "composer bump --ansi",
+      "composer audit --ansi"
+    ]
+  },
+  "extra": {
+    "kirby-cms-path": false,
+    "include_files": [
+      "src/bootstrap.php"
+    ]
+  },
+  "require": {
+    "php": "^8.1",
+    "funkjedi/composer-include-files": "^1.1",
+    "getkirby/cms": "^3.9.4",
+    "getkirby/composer-installer": "^1.2.1"
+  },
+  "require-dev": {
+    "laravel/pint": "^1.10",
+    "pestphp/pest": "^2.6.1",
+    "phpstan/phpstan": "^1.10.15",
+    "rector/rector": "^0.16.0",
+    "sempro/phpunit-pretty-print": "^1.2.1"
+  }
 }
