--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,6 @@
 name: tests
 
-on: ['push', 'pull_request']
+on: ["push", "pull_request"]
 
 jobs:
   test-php-code:
@@ -9,7 +9,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.0, 8.1, 8.2]
+        php: [8.1, 8.2]
 
     name: 🐘 PHP ${{ matrix.php }} - ${{ matrix.os }}
     steps:
