--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,6 @@
     "kirby-plugin",
     "php"
   ],
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "config": {
-    "allow-plugins": {
-      "getkirby/composer-installer": true,
-      "funkjedi/composer-include-files": true,
-      "pestphp/pest-plugin": true
-    },
-    "optimize-autoloader": true,
-    "preferred-install": "dist",
-    "sort-packages": true
-  },
   "autoload": {
     "psr-4": {
       "BenjaminHaeberli\\KirbySeo\\": "src/"
@@ -56,7 +44,7 @@
       "@test:types",
       "@test:unit"
     ],
-    "upgrade:composer": "composer update --prefer-stable --no-interaction --prefer-dist --ansi && composer validate --strict --ansi",
+    "upgrade:composer": "composer update --no-interaction --prefer-dist --ansi && composer validate --strict --ansi",
     "fix:composer": [
       "@upgrade:composer",
       "composer clear-cache --ansi",
@@ -64,6 +52,18 @@
       "composer bump --ansi",
       "composer audit --ansi"
     ]
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "allow-plugins": {
+      "getkirby/composer-installer": true,
+      "funkjedi/composer-include-files": true,
+      "pestphp/pest-plugin": true
+    },
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
   },
   "extra": {
     "kirby-cms-path": false,
@@ -81,7 +81,7 @@
     "laravel/pint": "^1.10",
     "pestphp/pest": "^2.6.1",
     "phpstan/phpstan": "^1.10.15",
-    "rector/rector": "^0.17.0",
+    "rector/rector": "^0.16.0",
     "sempro/phpunit-pretty-print": "^1.2.1"
   }
 }
